--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8084
+spring.data.mongodb.database=tap-consultas-db
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=${MONGODB_HOST}
