--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8084
 spring.data.mongodb.database=tap-consultas-db
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=${MONGODB_HOST}
-riesgo.analizar-estado-persona-url=http://localhost:8085/analizarEstado/persona
-riesgo.analizar-estado-personas-url=http://localhost:8085/analizarEstado/personas
+riesgo.analizar-estado-persona-url=http://${RIESGO_HOST}:8085/analizarEstado/persona
+riesgo.analizar-estado-personas-url=http://${RIESGO_HOST}:8085/analizarEstado/personas
